Fix overflow handling for sidebar and content.

--- a/app/assets/stylesheets/bsat/_page.scss
+++ b/app/assets/stylesheets/bsat/_page.scss
@@ -48,7 +48,8 @@
 
     #content {
       padding-top: $navbar-height + $bsat-page-header-height + $bsat-page-header-margin-bottom;
-      overflow: scroll;
+      overflow-y: auto;
+      overflow-x: hidden;
     }
   }
 
