--- a/app/assets/stylesheets/bsat/_sidebar.scss
+++ b/app/assets/stylesheets/bsat/_sidebar.scss
@@ -8,7 +8,8 @@
   box-shadow: -1px 0 1px darken($bsat-sidebar-background-color, 10%) inset;
   box-sizing: border-box;
   padding-top: 10px;
-  overflow-y: scroll;
+  overflow-y: auto;
+  overflow-x: hidden;
   @include single-transition(left, 0.3s, ease-in-out);
 
   .nav {
